# thesis

./: .driveignore  .gitignore  Makefile  README.md  configure.ac
dependencies/: .env  .gitignore  Makefile  README  README.md
doc/big-retreat/: Makefile  papers.bib  poster.tex
doc/committee-meeting/: Makefile  committee-meeting-1-summary.tex  presentation.tex  refs.bib
doc/committee-meeting-2/: Makefile  post.tex  presentation.tex  summary.tex
doc/committee-meeting-2/figures/: bc-vs-cn.R  nettree.R  phylo.R  prevalence.R  realtrees.R
doc/committee-meeting/aside/: make_net.R
doc/defence/: =  Makefile  abc.tex  acknowledgements.tex  aims.tex  ba.tex  conclusions.tex  contactnet.tex  data.tex  identifiable.tex  inference.tex  kpca.tex  map.tex  netmodel.tex  objects.tex  objects2.tex  phylo.tex  phylonet.tex  pointest.tex  pointest2.tex  posterior1.tex  posterior2.tex  presentation.tex  realdata.tex  smc.tex  supp.tex  test.tex  transtree.tex  transtree2.tex  trees.tex  virusphylo.tex  why.tex
doc/figures/: .gitignore  Makefile  abc-idea.R  abc-smc.R  acc-prec.R  alpha-bounds.R  compartments.tex  contactnet-empty.tex  contactnet.tex  epitrees.tex  gridsearch-expt-extra.R  gridsearch-expt.tex  homophily.R  kernel-expt-extra.R  kernel-expt.tex  kernel-idea.R  nettypes.R  nltt.R  objects.R  pa-example.R  pa.R  pipeline.tex  smc-test-bimodal.R  smc-test.R  speciestree.tex  transtree.tex  vaccinate.R
doc/hiv-dynamics/: abstract.md  presentation.tex
doc/ismb/: abstract.tex  poster.tex
doc/journal-club/: worby2014within.tex
doc/journal-club/feb25/: Makefile  goodreau2006assessing.tex
doc/journal-club/nov18/: robinson2013dynamics.tex
doc/journal-club/oct2/: Makefile
doc/paper/: Makefile  abstract.tex  changes.tex  coverletter.tex  mbe_submission.tex  paper.Rnw  paper.ist  paper.tex  supp-f1-9.tex
doc/paper/mbe_latex/: MBE-Sample.dvi  MBE.cls
doc/stats-seminar/: Makefile  abstract.txt  presentation.tex
doc/tables/: Makefile  abc-expt.tex  abc-hpd.tex  gamma-expt.tex  gridsearch-expt.tex  kernel-expt.tex  lit-gamma.tex  pa-gamma-glm.tex  realdata-bc-short.tex  realdata-bc.tex  realdata-gamma.tex  realdata.tex  tmp.sh
doc/thesis/: -]  .gitignore  .~lock.test.doc#  Makefile  \  abstract.Rnw  abstract.tex  abstract_exit.tex  acknowledgements.tex  appendix.Rnw  appendix.tex  changes.tex  conclusion.tex  discussion.Rnw  discussion.tex  global.R  intro.tex  main.acn  main.acr  main.alg  main.glg  main.glo  main.gls  main.ist  main.lot  main.tex  methods.tex  methods_results.Rnw  methods_results.tex  new.tex  objective.tex  outline.md  outline.sty  preamble.tex  preface.tex  results.Rnw  results.tex  revision_1_summary.tex  supplements.tex  test.doc
doc/thesis/figures/: abc_smc.R  acc_prec.R  contactnet.tex  gridsearch_expt.tex  kernel_expt.R  kernel_expt.tex  missing.tex  nltt.R  pa_power_bounds.R  phylogeny.tex  separable.R  speciestree.tex  virustrees.tex
programs/: README.md
programs/expt/: README.md  expt.py  params.py  test.yaml
programs/netabc/: .gitignore  DESCRIPTION  test.R
programs/netabc/R/: cluster.R  collect.R  contact.net.R  cv.R  genbank.R  goodreau.R  hpd.R  ksvm.cv.R  nltt.R  plots.R  process.archive.R  read.mm.R  util.R  write.tsv.R
programs/netsim/: .gitignore  Doxyfile  Makefile.am  README.md  aclocal.m4  configure  configure.ac
programs/netsim/src/: Makefile.am  ergm.c  ergm.h  mmpp.c  mmpp.h  netabc.c  nettree.c  newick_lexer.c  newick_lexer.l  newick_parser.c  newick_parser.h  newick_parser.y  pcbr.c  simulate.c  simulate.h  smc.c  smc.h  stats.c  stats.h  tree.c  tree.h  treekernel.c  treestat.c  treestats.c  treestats.h  util.c  util.h
programs/netsim/tests/: Makefile.am  check_mmpp.c  check_simulate.c  check_smc.c  check_stats.c  check_tree.c  check_treestats.c  check_util.c
programs/pcbr/: .gitignore  Makefile.am  README.md  configure.ac
programs/pcbr/C-Thread-Pool/: Makefile.am
programs/pcbr/c-cmaes/: Makefile.am
programs/pcbr/m4/: ax_compiler_flags_cflags.m4
programs/pcbr/src/: Makefile.am  likelihood.c  likelihood.h  pcbr.c  rwrapper.c  rwrapper.h  thread.c  thread.h  tree.c  tree.h  util.c  util.h
programs/pcbr/tests/: Makefile.am  check_likelihood.c  check_rwrapper.c  check_thread.c  check_tree.c  check_util.c
programs/scripts/: ksvm-cv.R  util.R
reading/: Makefile  README.md  check.sh  notes.md  papers.bib  papers.bib~
reading/todo/: list.md
reference/: Makefile  README.md
simulations/: .Rprofile  .env  .gitignore  I-vs-N.yaml  Makefile  README.md  abc-better-smc.yaml  abc-edges.sqlite  abc-edges.yaml  abc-genbank.yaml  abc-gnp.yaml  abc-marginal.yaml  abc-mean-degree.yaml  abc-pa-free-m.yaml  abc-pa-mixed-alpha.yaml  abc-pa-peerdriven.yaml  abc-pa-sir.yaml  abc-pa.yaml  abc-pareto.yaml  abc-smallworld.yaml  aggregates.yaml  appnote.sqlite  appnote.yaml  bctree-new.yaml  bctree.yaml  cuevas2009.yaml  expt.py  expt.py.old  expt_westgrid.py  grabowski2014.yaml  gridsearch-I.yaml  gridsearch-N.yaml  gridsearch-alpha.yaml  gridsearch-edge-density.sqlite  gridsearch-edge-density.yaml  gridsearch-m.yaml  gridsearch-mean-degree.sqlite  gridsearch-mean-degree.yaml  gridsearch-nbhd-size.sqlite  gridsearch-nbhd-size.yaml  (+54 more)
simulations/kernel-shapes/: .Rprofile  Makefile
simulations/leventhal2012-fig1/: Makefile
simulations/leventhal2012-fig1/src/: make_net.R  sackin.R  sackin_plot.R
simulations/old/: abc-pa.yaml  abc-smallworld.yaml  gridsearch-edge-density.yaml  kernel-edge-density.yaml  kernel-nbhd-size.yaml  kernel-pareto.yaml
